[gd_scene load_steps=10 format=3 uid="uid://ded7p1itmbmnm"]

[ext_resource type="Script" path="res://level4.gd" id="1_4lysh"]
[ext_resource type="PackedScene" uid="uid://cv44a3f4f6rhh" path="res://door.tscn" id="2_e4tag"]
[ext_resource type="PackedScene" uid="uid://vbvmm2v2b0jg" path="res://gear.tscn" id="3_5ucwg"]
[ext_resource type="PackedScene" uid="uid://cwitq4m302w3o" path="res://pressureplate.tscn" id="4_3tlsg"]
[ext_resource type="PackedScene" uid="uid://cq0r10no7tq1w" path="res://water/Water_Body.tscn" id="6_by3ox"]
[ext_resource type="PackedScene" uid="uid://biruvty6oo60x" path="res://poly.tscn" id="7_a6jlx"]
[ext_resource type="AudioStream" uid="uid://csjwjt3xwypqj" path="res://sounds/waterup.mp3" id="7_rxwfp"]
[ext_resource type="Script" path="res://powerable.gd" id="7_tymqq"]
[ext_resource type="AudioStream" uid="uid://dojbrmvbrdao2" path="res://sounds/waterdown.mp3" id="8_4oh3i"]

[node name="Level4" type="Node2D"]
script = ExtResource("1_4lysh")

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(160, 288)

[node name="CameraSpawn" type="Node2D" parent="."]

[node name="Door" parent="." instance=ExtResource("2_e4tag")]
position = Vector2(1057, 444)
new_level_id = 2

[node name="Gear" parent="." instance=ExtResource("3_5ucwg")]
position = Vector2(488, 680)
scale = Vector2(0.2, 0.2)
gear_rotation = 30

[node name="PressurePlate" parent="." node_paths=PackedStringArray("powerables") instance=ExtResource("4_3tlsg")]
position = Vector2(315, 833)
rotation = 3.14159
powerables = [NodePath("../WaterLevel1")]

[node name="PressurePlate2" parent="." node_paths=PackedStringArray("powerables") instance=ExtResource("4_3tlsg")]
position = Vector2(576, 544)
rotation = 3.14159
powerables = [NodePath("../WaterLevel2")]

[node name="Poly" parent="." instance=ExtResource("7_a6jlx")]
polygon = PackedVector2Array(473, 504, 793, 504, 793, 568, 489, 576, 537, 1032, 857, 1032, 857, 888, 689, 888, 665, 760, 1073, 760, 1097, 656, 1097, 600, 1001, 600, 1001, 632, 921, 632, 921, 120, 1241, 120, 1241, 3256, 281, 3256, 169, 2728, 257, 2376, 57, 2168, 113, 1632, 65, 1288, 201, 1144, 209, 968, 201, 792, 73, 704, 153, 592, 105, 440, 209, 224, 265, -64, 169, -168, 233, -304, 145, -680, 193, -928, 137, -1080, 209, -1176, 281, -1800, 473, -1800)

[node name="Water_Body" parent="." instance=ExtResource("6_by3ox")]
z_index = 3
position = Vector2(-64, 768)
spring_number = 25
depth = 1000
bruh = 1000

[node name="WaterUp" type="AudioStreamPlayer2D" parent="Water_Body"]
stream = ExtResource("7_rxwfp")
volume_db = -4.0

[node name="WaterDown" type="AudioStreamPlayer2D" parent="Water_Body"]
stream = ExtResource("8_4oh3i")
volume_db = -4.0

[node name="WaterLevel1" type="Node2D" parent="."]
script = ExtResource("7_tymqq")

[node name="WaterLevel2" type="Node2D" parent="."]
script = ExtResource("7_tymqq")

[connection signal="power_changed" from="WaterLevel1" to="." method="_on_water_level_1_power_changed"]
[connection signal="power_changed" from="WaterLevel2" to="." method="_on_water_level_2_power_changed"]
